[gd_scene load_steps=5 format=1]

[ext_resource path="res://Battle/BattleInfo.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Somepx.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Assets/Battle/hpBkgd.tex" type="Texture" id=3]
[ext_resource path="res://Assets/Battle/hpHigh.tex" type="Texture" id=4]

[node name="BattleInfo" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LevelLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 16.0
margin/right = 34.0
margin/bottom = 32.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Lvl. 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HpBar" type="TextureProgress" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 32.0
margin/right = 160.0
margin/bottom = 48.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
texture/under = ExtResource( 3 )
texture/over = null
texture/progress = ExtResource( 4 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )


